--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
        <h1 class="p-cert">
        PROFESSIONAL CERTIFICATES
     </h1>
-      <ul>
-        <li> JOHNS HOPKINS UNIVERSITY, “Business Analytics with Excel”</li>
-        <li>STANFORD UNIVERSITY, “Introduction to Statistics”</li>
-        <li>
+      <ul class="certs">
+        <li> ⦁ JOHNS HOPKINS UNIVERSITY, “Business Analytics with Excel”</li>
+        <li>⦁ STANFORD UNIVERSITY, “Introduction to Statistics”</li>
+        <li>⦁
            THE HONG KONG UNIVERSITY OF SCIENCE AND TECHNOLOGY, “Information
           system Auditing, Controls and Assurance”
         </li>
-        <li>
+        <li>⦁
            COURSERA PROJECT NETWORK, “Introduction to Data Analysis Using
           Microsoft Excel”
         </li>
         <li>
-          GOOGLE CAREER CERTIFICATE, “Google Data Analytics with Microsoft
+           ⦁ GOOGLE CAREER CERTIFICATE, “Google Data Analytics with Microsoft
           Excel”
         </li>
       </ul>
